@@ -10,6 +10,8 @@
 package org.elasticsearch.nativeaccess.jdk;
 
 import org.elasticsearch.core.Strings;
+import org.elasticsearch.foreign.LoaderHelper;
+import org.elasticsearch.foreign.adapter.LinkerAdapter;
 import org.elasticsearch.logging.LogManager;
 import org.elasticsearch.logging.Logger;
 import org.elasticsearch.nativeaccess.VectorSimilarityFunctions;
@@ -18,7 +20,6 @@ import org.elasticsearch.nativeaccess.VectorSimilarityFunctions.BFloat16QueryTyp
 import org.elasticsearch.nativeaccess.VectorSimilarityFunctions.DataType;
 import org.elasticsearch.nativeaccess.VectorSimilarityFunctions.Function;
 import org.elasticsearch.nativeaccess.VectorSimilarityFunctions.Operation;
-import org.elasticsearch.nativeaccess.lib.LoaderHelper;
 import org.elasticsearch.nativeaccess.lib.VectorLibrary;
 
 import java.lang.foreign.FunctionDescriptor;
@@ -26,17 +27,23 @@ import java.lang.foreign.MemorySegment;
 import java.lang.invoke.MethodHandle;
 import java.lang.invoke.MethodHandles;
 import java.lang.invoke.MethodType;
+import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.Collections;
 import java.util.HashMap;
+import java.util.List;
 import java.util.Map;
 import java.util.Objects;
+import java.util.function.BiFunction;
+import java.util.stream.Collectors;
 
 import static java.lang.foreign.ValueLayout.ADDRESS;
+import static java.lang.foreign.ValueLayout.JAVA_BYTE;
 import static java.lang.foreign.ValueLayout.JAVA_FLOAT;
 import static java.lang.foreign.ValueLayout.JAVA_INT;
 import static java.lang.foreign.ValueLayout.JAVA_LONG;
-import static org.elasticsearch.nativeaccess.jdk.LinkerHelper.downcallHandle;
-import static org.elasticsearch.nativeaccess.jdk.LinkerHelper.functionAddressOrNull;
+import static org.elasticsearch.foreign.LinkerHelper.downcallHandle;
+import static org.elasticsearch.foreign.LinkerHelper.functionAddressOrNull;
 
 public final class JdkVectorLibrary implements VectorLibrary {
 
@@ -65,7 +72,9 @@ public final class JdkVectorLibrary implements VectorLibrary {
      * This can be used to force binding to functions from a lower tier (e.g. AVX2 on a AVX-512
      * capable processor), or to disable native functions completely (by passing 0).
      * Usage: {@code -Des.vec_caps_override=1}.
-     * For benchmarks, add {@code --jvmArgsPrepend "-Des.vec_caps_override=..."} to {@code --args}.
+     * For benchmarks, add {@code --jvmArgsPrepend "--add-modules=jdk.incubator.vector -Des.vec_caps_override=..."}
+     * to {@code --args}. Note: {@code --jvmArgsPrepend} on the CLI replaces the {@code @Fork} annotation's
+     * {@code jvmArgsPrepend}, so {@code --add-modules=jdk.incubator.vector} must be included explicitly.
      *
      * @return the caps override value, or -1 if the property is not defined or invalid.
      */
@@ -87,9 +96,9 @@ public final class JdkVectorLibrary implements VectorLibrary {
     /**
      * Native functions in the native simdvec library can have multiple implementations, one for each "capability level".
      * A capability level of "0" means that there is no native function for that platform.
-     * Functions for the base ("1") level are exposed with a simple function name (e.g. "vec_dot7u")
+     * Functions for the base ("1") level are exposed with a simple function name (e.g. "vec_doti7u")
      * Functions for the more advanced levels (2, 3, ...) are exported with a name "decorated" by adding the capability level as
-     * a suffix: if the capability level is N, the suffix will be "_N" (e.g. "vec_dot7u_2").
+     * a suffix: if the capability level is N, the suffix will be "_N" (e.g. "vec_doti7u_2").
      * Capability levels maps to the availability of advanced vector instructions sets for a platform. For example, for x64 we currently
      * define 2 capability levels, 1 (base, processor supports AVX2) and 2 (processor supports AVX-512 with VNNI and VPOPCNT).
      * <p>
@@ -109,16 +118,155 @@ public final class JdkVectorLibrary implements VectorLibrary {
             var function = functionAddressOrNull(functionName + suffix);
             if (function != null) {
                 logger.debug("Binding {}", fullFunctionName);
-                return downcallHandle(function, functionDescriptor, LinkerHelperUtil.critical());
+                return downcallHandle(function, functionDescriptor, LinkerAdapter.critical());
             }
         }
         throw new LinkageError("Native function [" + functionName + "] could not be found");
     }
 
+    private static class NativeFunctions {
+
+        private record NativeFunction<E extends Enum<E>>(OperationSignature<E> op, String typeName, FunctionDescriptor descriptor) {}
+
+        private static final FunctionDescriptor intSingle = FunctionDescriptor.of(JAVA_INT, ADDRESS, ADDRESS, JAVA_INT);
+        private static final FunctionDescriptor longSingle = FunctionDescriptor.of(JAVA_LONG, ADDRESS, ADDRESS, JAVA_INT);
+        private static final FunctionDescriptor floatSingle = FunctionDescriptor.of(JAVA_FLOAT, ADDRESS, ADDRESS, JAVA_INT);
+        private static final FunctionDescriptor bulk = FunctionDescriptor.ofVoid(ADDRESS, ADDRESS, JAVA_INT, JAVA_INT, ADDRESS);
+        private static final FunctionDescriptor bulkOffsets = FunctionDescriptor.ofVoid(
+            ADDRESS,
+            ADDRESS,
+            JAVA_INT,
+            JAVA_INT,
+            ADDRESS,
+            JAVA_INT,
+            ADDRESS
+        );
+        private static final FunctionDescriptor bulk8 = FunctionDescriptor.ofVoid(
+            ADDRESS,
+            ADDRESS,
+            ADDRESS,
+            ADDRESS,
+            ADDRESS,
+            ADDRESS,
+            ADDRESS,
+            ADDRESS,  // data vectors
+            ADDRESS,  // query
+            JAVA_INT, // dims
+            ADDRESS   // results
+        );
+
+        final List<NativeFunction<?>> nativeFunctions = new ArrayList<>();
+
+        public NativeFunctions add(DataType type, Iterable<Function> functions, Iterable<Operation> operations) {
+            functions.forEach(f -> operations.forEach(op -> {
+                String typeName = switch (type) {
+                    case INT7U -> "i7u";
+                    case INT4 -> "i4";
+                    case INT8 -> "i8";
+                    case FLOAT32 -> "f32";
+                };
+                FunctionDescriptor descriptor = switch (op) {
+                    case SINGLE -> switch (type) {
+                        case INT7U, INT4 -> intSingle;
+                        case INT8, FLOAT32 -> floatSingle;
+                    };
+                    case BULK, BULK_SPARSE -> bulk;
+                    case BULK_OFFSETS -> bulkOffsets;
+                    case BULK8 -> bulk8;
+                };
+                nativeFunctions.add(new NativeFunction<>(new OperationSignature<>(f, type, op), typeName, descriptor));
+            }));
+            return this;
+        }
+
+        public NativeFunctions addBFloat16(Iterable<Function> functions, Iterable<Operation> operations) {
+            for (BFloat16QueryType type : BFloat16QueryType.values()) {
+                String typeName = switch (type) {
+                    case BFLOAT16 -> "Dbf16Qbf16";
+                    case FLOAT32 -> "Dbf16Qf32";
+                };
+                functions.forEach(f -> operations.forEach(op -> {
+                    FunctionDescriptor descriptor = switch (op) {
+                        case SINGLE -> floatSingle;
+                        case BULK, BULK_SPARSE -> bulk;
+                        case BULK_OFFSETS -> bulkOffsets;
+                        case BULK8 -> throw new IllegalArgumentException("BULK8 not supported for BFloat16");
+                    };
+                    nativeFunctions.add(new NativeFunction<>(new OperationSignature<>(f, type, op), typeName, descriptor));
+                }));
+            }
+            return this;
+        }
+
+        public NativeFunctions addBBQ(Iterable<BBQType> bbqTypes, Iterable<Operation> operations) {
+            bbqTypes.forEach(type -> operations.forEach(op -> {
+                String typeName = switch (type) {
+                    case D1Q1 -> "d1q1";
+                    case D1Q4 -> "d1q4";
+                    case D2Q2 -> "d2q2";
+                    case D2Q4 -> "d2q4";
+                    case D4Q4 -> "d4q4";
+                    case D2Q4_PACKED -> "d2q4_packed";
+                };
+                FunctionDescriptor descriptor = switch (op) {
+                    case SINGLE -> longSingle;
+                    case BULK, BULK_SPARSE -> bulk;
+                    case BULK_OFFSETS -> bulkOffsets;
+                    case BULK8 -> throw new IllegalArgumentException("BULK8 not supported for BBQ");
+                };
+                nativeFunctions.add(new NativeFunction<>(new OperationSignature<>(Function.DOT_PRODUCT, type, op), typeName, descriptor));
+            }));
+            return this;
+        }
+
+        static Iterable<Function> allFunctions() {
+            return () -> Arrays.stream(Function.values()).iterator();
+        }
+
+        static Iterable<Operation> standardOperations() {
+            return List.of(Operation.SINGLE, Operation.BULK, Operation.BULK_OFFSETS, Operation.BULK_SPARSE);
+        }
+
+        static Iterable<Operation> allOperations() {
+            return List.of(Operation.SINGLE, Operation.BULK, Operation.BULK_OFFSETS, Operation.BULK_SPARSE, Operation.BULK8);
+        }
+
+        static Iterable<BBQType> allBBQTypes() {
+            return () -> Arrays.stream(BBQType.values()).iterator();
+        }
+
+        private static String getOpName(Operation op) {
+            return switch (op) {
+                case SINGLE -> "";
+                case BULK -> "_bulk";
+                case BULK_OFFSETS -> "_bulk_offsets";
+                case BULK_SPARSE -> "_bulk_sparse";
+                case BULK8 -> "_bulk8";
+            };
+        }
+
+        private static String getFuncName(Function f) {
+            return switch (f) {
+                case COSINE -> "cos";
+                case DOT_PRODUCT -> "dot";
+                case SQUARE_DISTANCE -> "sqr";
+            };
+        }
+
+        public Map<OperationSignature<?>, MethodHandle> build(BiFunction<String, FunctionDescriptor, MethodHandle> binder) {
+            return nativeFunctions.stream()
+                .collect(
+                    Collectors.toUnmodifiableMap(
+                        f -> f.op,
+                        f -> binder.apply("vec_" + getFuncName(f.op.function()) + f.typeName + getOpName(f.op.operation()), f.descriptor)
+                    )
+                );
+        }
+    }
+
     static {
         LoaderHelper.loadLibrary("vec");
         MethodHandle vecCaps$mh = downcallHandle("vec_caps", FunctionDescriptor.of(JAVA_INT));
-        Map<OperationSignature<?>, MethodHandle> handles = new HashMap<>();
 
         try {
             int vecCaps = (int) vecCaps$mh.invokeExact();
@@ -132,111 +280,18 @@ public final class JdkVectorLibrary implements VectorLibrary {
             }
 
             if (finalVecCaps > 0) {
-                FunctionDescriptor intSingle = FunctionDescriptor.of(JAVA_INT, ADDRESS, ADDRESS, JAVA_INT);
-                FunctionDescriptor longSingle = FunctionDescriptor.of(JAVA_LONG, ADDRESS, ADDRESS, JAVA_INT);
-                FunctionDescriptor floatSingle = FunctionDescriptor.of(JAVA_FLOAT, ADDRESS, ADDRESS, JAVA_INT);
-                FunctionDescriptor bulk = FunctionDescriptor.ofVoid(ADDRESS, ADDRESS, JAVA_INT, JAVA_INT, ADDRESS);
-                FunctionDescriptor bulkOffsets = FunctionDescriptor.ofVoid(
-                    ADDRESS,
-                    ADDRESS,
-                    JAVA_INT,
-                    JAVA_INT,
-                    ADDRESS,
-                    JAVA_INT,
-                    ADDRESS
-                );
 
-                FunctionDescriptor bulkSparse = FunctionDescriptor.ofVoid(ADDRESS, ADDRESS, JAVA_INT, JAVA_INT, ADDRESS);
-
-                for (Function f : Function.values()) {
-                    String funcName = switch (f) {
-                        case COSINE -> "cos";
-                        case DOT_PRODUCT -> "dot";
-                        case SQUARE_DISTANCE -> "sqr";
-                    };
-
-                    for (Operation op : Operation.values()) {
-                        String opName = switch (op) {
-                            case SINGLE -> "";
-                            case BULK -> "_bulk";
-                            case BULK_OFFSETS -> "_bulk_offsets";
-                            case BULK_SPARSE -> "_bulk_sparse";
-                        };
-
-                        for (DataType type : DataType.values()) {
-                            // Only byte vectors have cosine
-                            // as floats are normalized to unit length to use dot_product instead
-                            if (f == Function.COSINE && type != DataType.INT8) continue;
-                            // Only DOT_PRODUCT is needed for int4 — other functions are computed by
-                            // applying correction terms on top of the raw dot product result.
-                            if (f != Function.DOT_PRODUCT && type == DataType.INT4) continue;
-                            // BULK_SPARSE only for INT7U, INT8, and INT4 — no native sparse functions exist for FLOAT32
-                            if (op == Operation.BULK_SPARSE && type == DataType.FLOAT32) continue;
-
-                            String typeName = switch (type) {
-                                case INT7U -> "i7u";
-                                case INT4 -> "i4";
-                                case INT8 -> "i8";
-                                case FLOAT32 -> "f32";
-                            };
-
-                            FunctionDescriptor descriptor = switch (op) {
-                                case SINGLE -> switch (type) {
-                                    case INT7U, INT4 -> intSingle;
-                                    case INT8, FLOAT32 -> floatSingle;
-                                };
-                                case BULK, BULK_SPARSE -> bulk;
-                                case BULK_OFFSETS -> bulkOffsets;
-                            };
-
-                            MethodHandle handle = bindFunction("vec_" + funcName + typeName + opName, finalVecCaps, descriptor);
-                            handles.put(new OperationSignature<>(f, type, op), handle);
-                        }
-
-                        for (BFloat16QueryType type : BFloat16QueryType.values()) {
-                            // only byte vectors have cosine
-                            if (f == Function.COSINE) continue;
-                            // BULK_SPARSE not yet implemented for bfloat16
-                            if (op == Operation.BULK_SPARSE) continue;
-
-                            String typeName = switch (type) {
-                                case BFLOAT16 -> "Dbf16Qbf16";
-                                case FLOAT32 -> "Dbf16Qf32";
-                            };
-
-                            FunctionDescriptor descriptor = switch (op) {
-                                case SINGLE -> floatSingle;
-                                case BULK, BULK_SPARSE -> bulk;
-                                case BULK_OFFSETS -> bulkOffsets;
-                            };
-
-                            MethodHandle handle = bindFunction("vec_" + funcName + typeName + opName, finalVecCaps, descriptor);
-                            handles.put(new OperationSignature<>(f, type, op), handle);
-                        }
-
-                        for (BBQType type : BBQType.values()) {
-                            // not implemented yet...
-                            if (f == Function.COSINE || f == Function.SQUARE_DISTANCE) continue;
-
-                            String typeName = switch (type) {
-                                case D1Q4 -> "d1q4";
-                                case D2Q4 -> "d2q4";
-                                case D4Q4 -> "d4q4";
-                            };
-
-                            FunctionDescriptor descriptor = switch (op) {
-                                case SINGLE -> longSingle;
-                                case BULK, BULK_SPARSE -> bulk;
-                                case BULK_OFFSETS -> bulkOffsets;
-                            };
-
-                            MethodHandle handle = bindFunction("vec_" + funcName + typeName + opName, finalVecCaps, descriptor);
-                            handles.put(new OperationSignature<>(f, type, op), handle);
-                        }
-                    }
-                }
-
-                HANDLES = Collections.unmodifiableMap(handles);
+                HANDLES = new NativeFunctions()
+                    // Only DOT_PRODUCT is needed for int4 — other functions are computed by applying correction terms on top of the raw
+                    // dot.
+                    .add(DataType.INT4, List.of(Function.DOT_PRODUCT), NativeFunctions.standardOperations())
+                    .add(DataType.INT7U, List.of(Function.DOT_PRODUCT, Function.SQUARE_DISTANCE), NativeFunctions.standardOperations())
+                    // Only byte vectors have cosine as other types are normalized to unit length to use dot_product instead
+                    .add(DataType.INT8, NativeFunctions.allFunctions(), NativeFunctions.allOperations())
+                    .add(DataType.FLOAT32, List.of(Function.DOT_PRODUCT, Function.SQUARE_DISTANCE), NativeFunctions.allOperations())
+                    .addBFloat16(List.of(Function.DOT_PRODUCT, Function.SQUARE_DISTANCE), NativeFunctions.standardOperations())
+                    .addBBQ(NativeFunctions.allBBQTypes(), NativeFunctions.standardOperations())
+                    .build((functionName, functionDescriptor) -> bindFunction(functionName, finalVecCaps, functionDescriptor));
 
                 FunctionDescriptor score = FunctionDescriptor.of(
                     JAVA_FLOAT,
@@ -276,6 +331,7 @@ public final class JdkVectorLibrary implements VectorLibrary {
                     JAVA_FLOAT,  // queryBitScale
                     JAVA_FLOAT,  // indexBitScale
                     JAVA_FLOAT,  // centroidDp
+                    JAVA_BYTE,   // readComponentSumAsInt (0 = 2-byte format, 1 = 4-byte format)
                     ADDRESS      // scores
                 );
 
@@ -387,18 +443,25 @@ public final class JdkVectorLibrary implements VectorLibrary {
             return true;
         }
 
+        /**
+         * Checks dimensions for BBQ bulk operations.
+         * @param queryBytesPerDocByte see {@link BBQType#queryBytesPerDocByte()}
+         * @param dataset the MemorySegment holding the vectors to score
+         * @param query the MemorySegment holding the query vector
+         * @param datasetVectorLengthInBytes
+         * @param count
+         * @param result the MemorySegment holding the result scores
+         */
         static boolean checkBBQBulk(
-            int dataBits,
+            int queryBytesPerDocByte,
             MemorySegment dataset,
             MemorySegment query,
             int datasetVectorLengthInBytes,
             int count,
             MemorySegment result
         ) {
-            final int queryBits = 4;
             Objects.checkFromIndexSize(0L, (long) datasetVectorLengthInBytes * count, dataset.byteSize());
-            // 1 bit data -> x4 bits query, 2 bit data -> x2 bits query
-            Objects.checkFromIndexSize(0L, (long) datasetVectorLengthInBytes * (queryBits / dataBits), query.byteSize());
+            Objects.checkFromIndexSize(0L, (long) datasetVectorLengthInBytes * queryBytesPerDocByte, query.byteSize());
             Objects.checkFromIndexSize(0L, (long) count * Float.BYTES, result.byteSize());
             return true;
         }
@@ -439,6 +502,34 @@ public final class JdkVectorLibrary implements VectorLibrary {
             return true;
         }
 
+        static boolean checkBulk8(
+            int elementBits,
+            MemorySegment a0,
+            MemorySegment a1,
+            MemorySegment a2,
+            MemorySegment a3,
+            MemorySegment a4,
+            MemorySegment a5,
+            MemorySegment a6,
+            MemorySegment a7,
+            MemorySegment query,
+            int dims,
+            MemorySegment result
+        ) {
+            long vectorBytes = (long) dims * elementBits / 8;
+            Objects.checkFromIndexSize(0L, vectorBytes, a0.byteSize());
+            Objects.checkFromIndexSize(0L, vectorBytes, a1.byteSize());
+            Objects.checkFromIndexSize(0L, vectorBytes, a2.byteSize());
+            Objects.checkFromIndexSize(0L, vectorBytes, a3.byteSize());
+            Objects.checkFromIndexSize(0L, vectorBytes, a4.byteSize());
+            Objects.checkFromIndexSize(0L, vectorBytes, a5.byteSize());
+            Objects.checkFromIndexSize(0L, vectorBytes, a6.byteSize());
+            Objects.checkFromIndexSize(0L, vectorBytes, a7.byteSize());
+            Objects.checkFromIndexSize(0L, vectorBytes, query.byteSize());
+            Objects.checkFromIndexSize(0L, 8L * Float.BYTES, result.byteSize());
+            return true;
+        }
+
         static boolean checkBFloat16BulkOffsets(
             int queryElementSize,
             MemorySegment a,
@@ -458,23 +549,37 @@ public final class JdkVectorLibrary implements VectorLibrary {
             return true;
         }
 
+        static boolean checkBFloat16BulkSparse(
+            int queryElementSize,
+            MemorySegment addresses,
+            MemorySegment b,
+            int length,
+            int count,
+            MemorySegment result
+        ) {
+            Objects.checkFromIndexSize(0L, (long) count * Long.BYTES, addresses.byteSize());
+            Objects.checkFromIndexSize(0L, (long) length * queryElementSize, b.byteSize());
+            Objects.checkFromIndexSize(0L, (long) count * Float.BYTES, result.byteSize());
+            assert validateBulkSparse(addresses, count, length, 16, result);
+            return true;
+        }
+
         static boolean checkBBQBulkSparse(
-            int dataBits,
+            int queryBytesPerDocByte,
             MemorySegment addresses,
             MemorySegment query,
             int datasetVectorLengthInBytes,
             int count,
             MemorySegment result
         ) {
-            final int queryBits = 4;
             Objects.checkFromIndexSize(0L, (long) count * Long.BYTES, addresses.byteSize());
-            Objects.checkFromIndexSize(0L, (long) datasetVectorLengthInBytes * (queryBits / dataBits), query.byteSize());
+            Objects.checkFromIndexSize(0L, (long) datasetVectorLengthInBytes * queryBytesPerDocByte, query.byteSize());
             Objects.checkFromIndexSize(0L, (long) count * Float.BYTES, result.byteSize());
             return true;
         }
 
         static boolean checkBBQBulkOffsets(
-            int dataBits,
+            int queryBytesPerDocByte,
             MemorySegment a,
             MemorySegment b,
             int datasetVectorLengthInBytes,
@@ -483,13 +588,12 @@ public final class JdkVectorLibrary implements VectorLibrary {
             int count,
             MemorySegment result
         ) {
-            final int queryBits = 4;
             if (pitch < datasetVectorLengthInBytes) throw new IllegalArgumentException(
                 "Pitch needs to be at least " + datasetVectorLengthInBytes
             );
             Objects.checkFromIndexSize(0L, (long) datasetVectorLengthInBytes * count, a.byteSize());
-            // 1 bit data -> x4 bits query, 2 bit data -> x2 bits query
-            Objects.checkFromIndexSize(0L, (long) datasetVectorLengthInBytes * (queryBits / dataBits), b.byteSize());
+            // STRIPED / PACKED: see BBQType#queryBytesPerDocByte for the layout-dependent multiplier.
+            Objects.checkFromIndexSize(0L, (long) datasetVectorLengthInBytes * queryBytesPerDocByte, b.byteSize());
             Objects.checkFromIndexSize(0L, (long) count * Integer.BYTES, offsets.byteSize());
             Objects.checkFromIndexSize(0L, (long) count * Float.BYTES, result.byteSize());
             assert validateBBQBulkOffsets(a, offsets, count, datasetVectorLengthInBytes, pitch, result);
@@ -688,6 +792,16 @@ public final class JdkVectorLibrary implements VectorLibrary {
             return callSingleDistanceFloat(squareDBF16QBF16Handle, a, b, elementCount);
         }
 
+        private static final MethodHandle dotD1Q1Handle = HANDLES.get(
+            new OperationSignature<>(Function.DOT_PRODUCT, BBQType.D1Q1, Operation.SINGLE)
+        );
+
+        static long dotProductD1Q1(MemorySegment a, MemorySegment query, int length) {
+            Objects.checkFromIndexSize(0L, length, query.byteSize());
+            Objects.checkFromIndexSize(0L, length, a.byteSize());
+            return callSingleDistanceLong(dotD1Q1Handle, a, query, length);
+        }
+
         private static final MethodHandle dotD1Q4Handle = HANDLES.get(
             new OperationSignature<>(Function.DOT_PRODUCT, BBQType.D1Q4, Operation.SINGLE)
         );
@@ -696,6 +810,16 @@ public final class JdkVectorLibrary implements VectorLibrary {
             Objects.checkFromIndexSize(0L, (long) length * 4, query.byteSize());
             Objects.checkFromIndexSize(0L, length, a.byteSize());
             return callSingleDistanceLong(dotD1Q4Handle, a, query, length);
+        }
+
+        private static final MethodHandle dotD2Q2Handle = HANDLES.get(
+            new OperationSignature<>(Function.DOT_PRODUCT, BBQType.D2Q2, Operation.SINGLE)
+        );
+
+        static long dotProductD2Q2(MemorySegment a, MemorySegment query, int length) {
+            Objects.checkFromIndexSize(0L, length, query.byteSize());
+            Objects.checkFromIndexSize(0L, length, a.byteSize());
+            return callSingleDistanceLong(dotD2Q2Handle, a, query, length);
         }
 
         private static final MethodHandle dotD2Q4Handle = HANDLES.get(
@@ -716,6 +840,16 @@ public final class JdkVectorLibrary implements VectorLibrary {
             Objects.checkFromIndexSize(0L, length, query.byteSize());
             Objects.checkFromIndexSize(0L, length, a.byteSize());
             return callSingleDistanceLong(dotD4Q4Handle, a, query, length);
+        }
+
+        private static final MethodHandle dotD2Q4PackedHandle = HANDLES.get(
+            new OperationSignature<>(Function.DOT_PRODUCT, BBQType.D2Q4_PACKED, Operation.SINGLE)
+        );
+
+        static long dotProductD2Q4_PACKED(MemorySegment a, MemorySegment query, int length) {
+            Objects.checkFromIndexSize(0L, (long) length * 4, query.byteSize());
+            Objects.checkFromIndexSize(0L, length, a.byteSize());
+            return callSingleDistanceLong(dotD2Q4PackedHandle, a, query, length);
         }
 
         private static void checkByteSize(long aSize, long bSize) {
@@ -833,6 +967,7 @@ public final class JdkVectorLibrary implements VectorLibrary {
             float queryBitScale,
             float indexBitScale,
             float centroidDp,
+            byte readComponentSumAsInt,
             MemorySegment scores
         ) {
             try {
@@ -849,6 +984,7 @@ public final class JdkVectorLibrary implements VectorLibrary {
                     queryBitScale,
                     indexBitScale,
                     centroidDp,
+                    readComponentSumAsInt,
                     scores
                 );
             } catch (Throwable t) {
@@ -869,6 +1005,7 @@ public final class JdkVectorLibrary implements VectorLibrary {
             float queryBitScale,
             float indexBitScale,
             float centroidDp,
+            byte readComponentSumAsInt,
             MemorySegment scores
         ) {
             try {
@@ -885,6 +1022,7 @@ public final class JdkVectorLibrary implements VectorLibrary {
                     queryBitScale,
                     indexBitScale,
                     centroidDp,
+                    readComponentSumAsInt,
                     scores
                 );
             } catch (Throwable t) {
@@ -905,6 +1043,7 @@ public final class JdkVectorLibrary implements VectorLibrary {
             float queryBitScale,
             float indexBitScale,
             float centroidDp,
+            byte readComponentSumAsInt,
             MemorySegment scores
         ) {
             try {
@@ -921,6 +1060,7 @@ public final class JdkVectorLibrary implements VectorLibrary {
                     queryBitScale,
                     indexBitScale,
                     centroidDp,
+                    readComponentSumAsInt,
                     scores
                 );
             } catch (Throwable t) {
@@ -1030,7 +1170,7 @@ public final class JdkVectorLibrary implements VectorLibrary {
                                         )
                                     );
                                     yield MethodHandles.guardWithTest(
-                                        MethodHandles.insertArguments(checkMethod, 0, bbq.dataBits()),
+                                        MethodHandles.insertArguments(checkMethod, 0, bbq.queryBytesPerDocByte()),
                                         op.getValue(),
                                         MethodHandles.empty(op.getValue().type())
                                     );
@@ -1117,7 +1257,27 @@ public final class JdkVectorLibrary implements VectorLibrary {
                                         )
                                     );
                                     yield MethodHandles.guardWithTest(
-                                        MethodHandles.insertArguments(checkMethod, 0, bbq.dataBits()),
+                                        MethodHandles.insertArguments(checkMethod, 0, bbq.queryBytesPerDocByte()),
+                                        op.getValue(),
+                                        MethodHandles.empty(op.getValue().type())
+                                    );
+                                }
+                                case BFloat16QueryType bfq -> {
+                                    MethodHandle checkMethod = lookup.findStatic(
+                                        JdkVectorSimilarityFunctions.class,
+                                        "checkBFloat16BulkSparse",
+                                        MethodType.methodType(
+                                            boolean.class,
+                                            int.class,
+                                            MemorySegment.class,
+                                            MemorySegment.class,
+                                            int.class,
+                                            int.class,
+                                            MemorySegment.class
+                                        )
+                                    );
+                                    yield MethodHandles.guardWithTest(
+                                        MethodHandles.insertArguments(checkMethod, 0, bfq.bytes()),
                                         op.getValue(),
                                         MethodHandles.empty(op.getValue().type())
                                     );
@@ -1146,7 +1306,7 @@ public final class JdkVectorLibrary implements VectorLibrary {
                                         )
                                     );
                                     yield MethodHandles.guardWithTest(
-                                        MethodHandles.insertArguments(checkMethod, 0, bbq.dataBits()),
+                                        MethodHandles.insertArguments(checkMethod, 0, bbq.queryBytesPerDocByte()),
                                         op.getValue(),
                                         MethodHandles.empty(op.getValue().type())
                                     );
@@ -1200,6 +1360,36 @@ public final class JdkVectorLibrary implements VectorLibrary {
 
                             handlesWithChecks.put(op.getKey(), handleWithChecks);
                         }
+                        case BULK8 -> {
+                            MethodHandle checkMethod = lookup.findStatic(
+                                JdkVectorSimilarityFunctions.class,
+                                "checkBulk8",
+                                MethodType.methodType(
+                                    boolean.class,
+                                    int.class,
+                                    MemorySegment.class,
+                                    MemorySegment.class,
+                                    MemorySegment.class,
+                                    MemorySegment.class,
+                                    MemorySegment.class,
+                                    MemorySegment.class,
+                                    MemorySegment.class,
+                                    MemorySegment.class,
+                                    MemorySegment.class,
+                                    int.class,
+                                    MemorySegment.class
+                                )
+                            );
+                            MethodHandle handleWithChecks = switch (op.getKey().dataType()) {
+                                case DataType dt -> MethodHandles.guardWithTest(
+                                    MethodHandles.insertArguments(checkMethod, 0, dt.bits()),
+                                    op.getValue(),
+                                    MethodHandles.empty(op.getValue().type())
+                                );
+                                default -> throw new IllegalArgumentException("Unknown handle type for BULK8: " + op.getKey().dataType());
+                            };
+                            handlesWithChecks.put(op.getKey(), handleWithChecks);
+                        }
                     }
                 }
 
@@ -1250,6 +1440,7 @@ public final class JdkVectorLibrary implements VectorLibrary {
                     float.class,          // queryBitScale
                     float.class,          // indexBitScale
                     float.class,          // centroidDp
+                    byte.class,           // readComponentSumAsInt (0 = 2-byte format, 1 = 4-byte format)
                     MemorySegment.class   // scores
                 );
 
